* fixed misplaced (unintentionally cropped) icons

--- a/asset/css/ext.css
+++ b/asset/css/ext.css
@@ -101,7 +101,7 @@ table.extInfo {
 
 	/* Column configs */
 .rolesListing td.icon {
-	background:url(../img/icons.png) no-repeat 6px -204px;
+	background:url(../img/icons.png) no-repeat 3px -204px;
 }
 .rolesListing td.actions span.icon {
 	margin-right:5px;
